# DDML

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  BIBAE_Tau_pi0_rec_commands.sh  BIBAE_Tau_pi0_sim_commands.sh  CMakeLists.txt  CMakeLists_old_2.txt  G4_Tau_pi0_rec_commands.sh  G4_Tau_pi0_sim_commands.sh  README.md  Version_G4_check_REC_commands.sh  Version_G4_check_commands.sh  photon_geo_check_commands_BIBAE.sh  photon_geo_check_commands_G4.sh  setup_env.sh  setup_env_nightly.sh  setup_env_stable.sh
.github/workflows/: pre-commit.yml
CLILC_local/CLIC/compact/CLIC_o2_v05_Fully_Sensitive/: ECalBarrel_o2_v01_02.xml
FCCee_local/FCCee/CLD/compact/CLD_o2_v05_Fully_Sensitive/: ECalBarrel_o2_v01_03.xml  ECalEndcap_o2_v01_03.xml
ODDxml/All_sesnsitive_xml/xml/: OpenDataCalorimeter_allActive.xml  OpenDataDetector_allActive.xml  OpenDataDetector_noTracker.xml  OpenDataECal_allActive.xml  OpenDataHCal_allActive.xml  OpenDataLongStrips.xml  OpenDataShortStrips.xml
ODDxml/xml/: OpenDataDetectorEnvelopes.xml  OpenDataPixels.xml
cmake/: FindOnnxRuntime.cmake
edm4hep_analysis/: README.md  edm4hep_api_intro.md  edm4hep_path.py  edm4hep_python.ipynb
edm4hep_analysis/.ipynb_checkpoints/: edm4hep_python-checkpoint.ipynb
include/DDFastShowerML/: FastMLShower.h  InferenceInterface.h  ONNXInference.h
include/DDML/: CaloCloudsTwoAngleModel.h  CylindricalBarrelGeometryParallelWorld.h  DDML.h  DDMLEventAction.h  DDMLRunAction.h  EndcapGeometry.h  EndcapGeometryParallelWorld.h  EndcapTriggerTwoAngleBIBAE.h  FCCeeCLDGeometry.h  FastMLShower.h  Geant4FastHitMakerGlobal.h  GeometryInterface.h  InferenceInterface.h  L2LFlowsModel.h  L2LFlowsx9Model.h  LinkDef.h  LoadHdf5.h  LoadHdf5IO.h  ModelInterface.h  ONNXInference.h  OctogonalBarrelTrigger.h  Par04CylindrialScoringMeshVAE.h  Par04ExampleVAE.h  ParallelWorldALLEGROCaloDiTModel.h  ParallelWorldCaloDiTModel.h  PionClouds.h  PionCloudsModel.h  PolyhedraBarrelGeometry.h  PolyhedraBarrelGeometryParallelWorld.h  RegularGridBIBAEModel.h  RegularGridGANModel.h  RegularGridTwoAngleBIBAEModel.h  TorchInference.h  TorchInference_BIBAE.h  TriggerInterface.h
models/: BIBAE_Full_PP_cut.pt.md5  CC3_SF_2A.pt.md5  CMakeLists.txt  L2LFlowsx9.pt.md5  README.md
scripts/: ddsim_steer.py  ddsim_steer_ParallelWorld_ALLEGRO_SD.py  ddsim_steer_ParallelWorld_SD.py  ddsim_steer_Record_Calo_entry.py  ddsim_steer_Version_G4_check.py  ddsim_steer_fullsim.py  ddsim_steer_photon_geo_check_BIBAE.py  ddsim_steer_photon_geo_check_CaloClouds.py  ddsim_steer_photon_geo_check_G4.py  ddsim_steer_taus_BIBAE.py  ddsim_steer_taus_G4.py  dummyOutput.slcio  edm4hep2h5.py  edm4hep_analysis.ipynb  event_display.py  photon_geo_check.mac  singleEmMesh_gps_Optimise_ALLEGRO.mac  singleEmMesh_gps_Optimise_CLD.mac  test_onnx.mac
scripts/.ipynb_checkpoints/: edm4hep_analysis-checkpoint.ipynb
src/: CMakeLists.txt  CMakeLists_old_2.txt  CaloCloudsTwoAngleModel.cc  CylindricalBarrelGeometryParallelWorld.cc  DDMLEventAction.cc  DDMLRunAction.cc  EndcapGeometry.cc  EndcapGeometryParallelWorld.cc  EndcapTriggerTwoAngleBIBAE.cc  FCCeeCLDGeometry.cc  Geant4FastHitMakerGlobal.cc  L2LFlowsModel.cc  L2LFlowsx9Model.cc  LoadHdf5.cc  LoadHdf5IO.cc  MLModelActions.cc  ONNXInference.cc  OctogonalBarrelTrigger.cc  Par04CylindrialScoringMeshVAE.cc  Par04ExampleVAE.cc  ParallelWorldALLEGROCaloDiTModel.cc  ParallelWorldCaloDiTModel.cc  ParallelWorldSD.cc  PionClouds.cc  PionCloudsModel.cc  PolyhedraBarrelGeometry.cc  PolyhedraBarrelGeometryParallelWorld.cc  RegularGridBIBAEModel.cc  RegularGridGANModel.cc  RegularGridTwoAngleBIBAEModel.cc  SimpleMLModel.cc  TorchInference.cc  TorchInference_BIBAE.cc
tests/: Dockerfile  entrypoint.sh  test.py
